Prevent author and reviewer names from wrapping
Fixes #1471 by adding white-space: nowrap for
author and reviewer

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -196,6 +196,11 @@
   font-weight: normal;
 }
 
+.byline .author,
+.byline .reviewer {
+  white-space: nowrap;
+}
+
 .chapter_links .btn {
   display: inline-block;
   margin: 10px;
